--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   <body bgcolor="grey">
 <ul>
     <li><a class="active" href="#home ">HOME PAGE</a></li>
-    <li><a href="file:///D:/SEM%205/IMD311/INDIVIDUAL%20ASSIGNMENT%20HTML/biodata.html" target="_blank">BIODATA</a></li> 
-    <li><a href="file:///D:/SEM%205/IMD311/INDIVIDUAL%20ASSIGNMENT%20HTML/experience.html" target="_blank">EXPERIENCE</a></li>
-    <li><a href="file:///D:/SEM%205/IMD311/INDIVIDUAL%20ASSIGNMENT%20HTML/education.html" target="_blank">EDUCATION</a></li>
-    <li><a href="file:///D:/SEM%205/IMD311/INDIVIDUAL%20ASSIGNMENT%20HTML/family.html" target="_blank">FAMILY</a></li>
-    <li><a href="file:///D:/SEM%205/IMD311/INDIVIDUAL%20ASSIGNMENT%20HTML/gallery.html" target="_blank">GALLERY</a></li>
-    <li><a href="file:///D:/SEM%205/IMD311/INDIVIDUAL%20ASSIGNMENT%20HTML/mycontact.html" target="_blank">CONTACT ME</a></li>
+    <li><a href="biodata.html" target="_self">BIODATA</a></li>
+    <li><a href="experience.html">EXPERIENCE</a></li>
+    <li><a href="education.html">EDUCATION</a></li>
+    <li><a href="family.html">FAMILY</a></li>
+    <li><a href="gallery.html">GALLERY</a></li>
+    <li><a href="mycontact.html">CONTACT ME</a></li>
 </ul> 
 <div style="border-image-repeat: 15%; text-align: center;">
 <h1 style="font-family: bedrock; background-color: darkgoldenrod; color: black; font-size: 60px;">.......  WELCOME TO MY HOME PAGE &#128525</h1>
