--- a/family.html
+++ b/family.html
@@ -39,7 +39,7 @@
 
 		<p>
 		<tr>
-			<td><img src="images/family.jpg" style="width: 65%; text-align: center; padding-top: 45px;"><br>
+			<td><img src="images/myfamily.jpg" style="width: 65%; text-align: center; padding-top: 45px;"><br>
 		<p>
 			<h1 style="text-align: left; padding-left: 130px; font-size: 20px;"><u>PARENTS</u></h1>
 			<h2 style="text-align: left; font-family: papyrus; padding-left: 130px; font-size: 15px;">FATHER</h3>
